# parabix-transcompiler

./: CMakeLists.txt  lasciitest.txt  lfullhalftest.txt  testlascii.sh  testlfullhalf.sh
icgrep/: CMakeLists.txt  base64.cpp  (+8 more)
transliterator_compiler/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
transliterator_compiler/include/: compiler.h  kernel_calls.h  transform_kernel.h
transliterator_compiler/lib/codegen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/fileselect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/grep/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/idisa/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/kernel/basis/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/kernel/bitwise/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/objcache/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/pablo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/lib/toolchain/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transliterator_compiler/src/: compiler.cpp  kernel_calls.cpp  transform_kernel.cpp
transliterator_compiler/src/transform/: CMakeLists.txt  lower.cpp  upper.cpp
transliterator_compiler/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+441 files in other folders)
